<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/white"
        tools:context=".MainActivity" android:layout_margin="20dp">

    <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center" android:id="@+id/linear" android:layout_marginBottom="20dp">

            <TextView
                    android:id="@+id/titre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/main_titre_size_bonjour"
                    android:text="@string/main_titre"

                    android:layout_marginBottom="30dp"/>

            <TextView
                    android:id="@+id/bienvenue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textAlignment="center"
                    android:textSize="@dimen/main_titre_size_bienvenue"
                    android:text="@string/main_welcome"
            />

            <ImageView
                    android:id="@+id/image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo"
                    android:contentDescription="@string/todo"/>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                <TextView
                        android:id="@+id/main_nombreJoueurs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/main_titre_size_bienvenue"
                        android:text="@string/nombre_de_joueurs"/>

                <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <Button
                        android:id="@+id/main_generateEdit"
                        android:textSize="@dimen/main_titre_size_bienvenue"
                        android:text="@string/ok"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>